fixed unnecessary scrollbar

--- a/styles/layouts/l-flows.scss
+++ b/styles/layouts/l-flows.scss
@@ -60,7 +60,7 @@ body, html {
       top: 0;
       width: 320px;
       height: 100%;
-      overflow-y: scroll;
+      overflow-y: auto;
     }
 
     > .c-map {
